# tutorials

./: README.md  index.html
android/OpenGLTest/app/: build.gradle
nature_of_code/: nature_of_code.html  random_count_dist.pde  random_walker.html  random_walker.pde
opencv/: README.md  notes.txt  todo
opencv/Blend/: Blend  Blend.cpp  CMakeCache.txt  Makefile  cmake_install.cmake
opencv/Contrast/: CMakeCache.txt  Makefile  cmake_install.cmake
opencv/DFT/: CMakeLists.txt
opencv/Drawing/: CMakeLists.txt  Drawing  Drawing.cpp
opencv/FindContours/: CMakeLists.txt
opencv/HowToScan/: CMakeCache.txt  CMakeLists.txt  HowToScan.cpp  Makefile  cmake_install.cmake
opencv/LoadDisplay/: CMakeCache.txt  LoadDisplay  Makefile  cmake_install.cmake
opencv/LoadModSave/: CMakeCache.txt  LoadModSave  LoadModSave.cpp  Makefile  cmake_install.cmake
opencv/Mask/: CMakeCache.txt  Makefile  Mask.cpp  cmake_install.cmake
opencv/MatDemo/: CMakeCache.txt  CMakeLists.txt  Makefile  MatDemo  MatDemo.cpp  cmake_install.cmake
opencv/RandomText/: CMakeLists.txt  RandomText  RandomText.cpp
opencv/Smoothing/: CMakeLists.txt
opencv/Sobel/: Sobel.cpp
opencv/Threshold/: Threshold
opencv/cpp/: notes
opencv/cpp/Blend/: CMakeLists.txt
opencv/cpp/Contrast/: CMakeLists.txt  Contrast  Contrast.cpp
opencv/cpp/ConvexHulls/: CMakeLists.txt
opencv/cpp/DFT/: DFT  DFT.cpp
opencv/cpp/HowToScan/: HowToScan
opencv/gccCMake/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
opencv/mmgp/: flood_fill.py  oil_droplets.py
opencv/py/: watershed.py
(+22 files in other folders)
